# VisionUtils

./: .gitignore  CMakeLists.txt  README  README.md  VisionUtils.pro  camcalibration.xml  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  notes  plot.cpp  plot.h  plotwindow.cpp  plotwindow.h  plotwindow.ui  secondarywindow.cpp  secondarywindow.cpp.autosave  secondarywindow.h  secondarywindow.ui
calibration/: Calibration.h
featuredetection/: FD.h  matcher.h  myfeaturedetection.h  tracker.h
gui/: GUI.h
include/calibration/: Settings.h
include/featuredetection/: FD.h  matcher.h  myfeaturedetection.h  tracker.h
include/statics/: statics_tools.h
include/statistics/: statistics_tools.h
monocularvision/: MVO.h  matcher.h  myfeaturedetection.h  tracker.h  visualizer.h
qcustomplot/examples/build-plot-examples-Desktop-Debug/: Makefile  moc_qcustomplot.cpp
qcustomplot/examples/plots/: mainwindow.cpp
qt/: mainQt.cpp  mainwindow.cpp
src/: Calibration.cpp  FD.cpp  GUI.cpp  MVO.cpp  Matcher.cpp  Settings.cpp  cmdmain.cpp  main.cpp  mainwindow.cpp  myfeacturedetection.cpp  myfeaturedetection.cpp  statics_tools.cpp  statistics_tools.cpp  tracker.cpp  visualizer.cpp
statics/: statics_tools.h
